Fix missing endif tag in shift_detail template

--- a/core/templates/core/shift_detail.html
+++ b/core/templates/core/shift_detail.html
@@ -689,6 +689,7 @@
             </div><!-- End card-body for collapsible -->
         </div><!-- End collapsible card -->
     </div><!-- End collapse div -->
+    {% endif %}
 
             <!-- Approval Section -->
             {% if shift.status == 'submitted' and user.is_staff %}
